# project_do4ds

./: .Rhistory  .nojekyll  _quarto.yml  about.html  app-api.R  app-api.py  do4ds.Rproj  eda-basic.html  eda-basic.qmd  index.html  index.qmd  model.html  my-db.duckdb  my-db_python.duckdb  py-data-load.py  py-run-model-api.py  pyproject.toml  robots.txt  search.json  sitemap.xml
.Rproj.user/81FF6594/pcs/: files-pane.pper  windowlayoutstate.pper
.Rproj.user/81FF6594/quarto-crossref/: INDEX
.Rproj.user/81FF6594/sources/per/t/: B169E8FB  B169E8FB-contents  DEDE2D9B
.Rproj.user/81FF6594/sources/prop/: B6DDB42E  EEFA9691  INDEX
.Rproj.user/shared/notebooks/: paths
.Rproj.user/shared/notebooks/29EC5569-model/1/81FF6594a75a375a/: chunks.json
.Rproj.user/shared/notebooks/A851D88D-eda-basic/1/81FF6594a75a375a/: chunks.json
.Rproj.user/shared/notebooks/A851D88D-eda-basic/1/s/cex1addpvh5r2/: 000010.html
.Rproj.user/shared/notebooks/A851D88D-eda-basic/1/s/cx2xj1bhfgfws/: 000010.metadata  000010.snapshot
.github/workflows/: publish.yml
_site/: eda-basic.html  index.html  model.html
data/model/penguin_model/20250816T111437Z-49eca/: data.txt  penguin_model.joblib
