[project]
name = "project-do4ds"
version = "0.1.0"
requires-python = ">=3.13.6"
dependencies = [
    "duckdb>=1.3.2",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "palmerpenguins>=0.1.4",
    "pandas>=2.3.1",
    "pyyaml>=6.0.2",
    "quarto>=0.1.0",
    "scikit-learn>=1.7.1",
    "setuptools>=80.9.0",
    "shiny>=1.4.0",
    "vetiver>=0.2.6",
]
